# solana-fellowship-assignment

./: Cargo.toml
src/: main.rs
src/controllers/: keypair.rs  message.rs  mod.rs  token.rs  transfer.rs
src/models/: api_response.rs  keypair.rs  message.rs  mod.rs  token.rs  transfer.rs
src/services/: keypair.rs  message.rs  token.rs  transfer.rs
