[package]
name = "solana-fellowship-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.10"
base64 = "0.22.1"
bs58 = "0.5"
solana-sdk = "2.3.1"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
